--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,30 +1,34 @@
+# azure-pipelines.yml
+trigger:
+- main  # Adjust the branch as needed
+
+variables:
+  DOCKER_IMAGE: 'todo-app:$(Build.BuildId)'  # Set the Docker image name with a unique build ID
+
+pool:
+  vmImage: 'ubuntu-latest'  # Use the latest Ubuntu image
+
 stages:
-  - stage: BuildAndDeploy
-    displayName: 'Build and Deploy'
-    jobs:
-      - job: BuildAndRunJob
-        displayName: 'Build and Run'
-        pool:
-          vmImage: 'ubuntu-latest'
+- stage: Build
+  displayName: 'Build Docker Image'
+  jobs:
+  - job: Build
+    displayName: 'Build Docker Image'
+    steps:
+    - checkout: self  # Clone the repository
 
-        steps:
-          - task: UseNode@1
-            inputs:
-              version: '14.x'
+    - script: |
+        echo "Building Docker image..."
+        docker build -t $(DOCKER_IMAGE) .  # Build the Docker image
+      displayName: 'Build Docker Image'
 
-          - script: |
-              yarn install --frozen-lockfile
-              yarn build
-            displayName: 'Install & Build App'
-
-          - task: Docker@2
-            displayName: 'Build Docker Image'
-            inputs:
-              command: 'build'
-              Dockerfile: '**/Dockerfile'
-              tags: |
-                todo-app:$(Build.BuildId)
-
-          - script: |
-              docker run -d -p 90:80 todo-app:$(Build.BuildId)
-            displayName: 'Run Docker Container'
+- stage: Deploy
+  displayName: 'Deploy Docker Container'
+  jobs:
+  - job: Deploy
+    displayName: 'Run Docker Container'
+    steps:
+    - script: |
+        echo "Running Docker container..."
+        docker run -d -p 90:80 $(DOCKER_IMAGE)  # Run the Docker container and map ports
+      displayName: 'Run Docker Container'
