--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,28 +1,48 @@
 trigger:
-- main
+- main  # Trigger the pipeline on changes to the main branch
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'ubuntu-latest'  # Use the latest Ubuntu image for the build agent
 
 variables:
-  DOCKER_IMAGE_NAME: 'todo-app'
-  DOCKER_IMAGE_TAG: '$(Build.BuildId)'  # Unique tag for each build
+  dockerImageName: 'todo-app'  # Base name for the Docker image
+  buildId: $(Build.BuildId)  # Unique build ID provided by Azure DevOps
 
-stages:
-- stage: Build
-  jobs:
-  - job: Build
-    steps:
-    - checkout: self
-    - script: |
-        docker build -t $(DOCKER_IMAGE_NAME):$(DOCKER_IMAGE_TAG) .
-      displayName: 'Build Docker Image'
+steps:
 
-- stage: Deploy
-  jobs:
-  - job: Deploy
-    steps:
-    - script: |
-        echo "Running Docker container..."
-        docker run -d -p 90:80 $(DOCKER_IMAGE_NAME):$(DOCKER_IMAGE_TAG)
-      displayName: 'Run Docker Container'
+- task: UseNode@1
+  inputs:
+    version: '14.x'  # Use Node.js version 14
+  displayName: 'Use Node.js 14'
+
+- script: |
+    echo "Installing dependencies..."
+    yarn install --frozen-lockfile
+    echo "Building the application..."
+    yarn build
+  displayName: 'Install Dependencies and Build'
+
+- script: |
+    echo "Building Docker image..."
+    docker build -t $(dockerImageName):$(buildId) .
+  displayName: 'Build Docker Image'
+
+- script: |
+    echo "Running Docker container..."
+    docker run -d -p 90:80 $(dockerImageName):$(buildId)
+  displayName: 'Run Docker Container'
+
+- script: |
+    echo "Testing the application..."
+    curl http://localhost:90
+  displayName: 'Test Application'
+
+- script: |
+    echo "Deployment successful!"
+  condition: succeeded()
+  displayName: 'Deployment Success'
+
+- script: |
+    echo "Deployment failed!"
+  condition: failed()
+  displayName: 'Deployment Failure'
