--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,42 +1,69 @@
 trigger:
   branches:
     include:
-      - main
+      - cach
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'ubuntu-latest' # Use Azure-hosted agent
 
 variables:
   imageName: 'mahmoudalsory/todoapp'
-  cacheTag: 'buildcache'
+  yarnCacheFolder: '$(Pipeline.Workspace)/.yarn'
+  dockerBuildKitCacheFolder: '$(Pipeline.Workspace)/docker-buildkit-cache'
 
 steps:
+# Step 1: Install Docker
 - task: DockerInstaller@0
   inputs:
     dockerVersion: '20.10.7'
+  displayName: 'Install Docker'
 
+# Step 2: Cache Yarn Dependencies
+- task: Cache@2
+  inputs:
+    key: 'yarn | "$(Agent.OS)" | package.json, yarn.lock'
+    restoreKeys: |
+      yarn | "$(Agent.OS)"
+    path: $(yarnCacheFolder)
+  displayName: 'Cache Yarn Dependencies'
+
+# Step 3: Install Yarn Dependencies
 - script: |
-    echo "$(DOCKERHUB_PASSWORD)" | docker login -u "$(DOCKERHUB_USERNAME)" --password-stdin
-  displayName: 'Login to Docker Hub'
+    mkdir -p $(yarnCacheFolder)
+    yarn config set cache-folder $(yarnCacheFolder)
+    yarn install --frozen-lockfile
+  displayName: 'Install Yarn Dependencies'
 
+# Step 4: Cache Docker BuildKit Layers
+- task: Cache@2
+  inputs:
+    key: 'docker | "$(Agent.OS)" | Dockerfile'
+    restoreKeys: |
+      docker | "$(Agent.OS)"
+    path: $(dockerBuildKitCacheFolder)
+  displayName: 'Cache Docker BuildKit Layers'
+
+# Step 5: Setup Docker Buildx
 - script: |
     docker buildx create --use --name builder
     docker buildx inspect --bootstrap
   displayName: 'Setup Docker Buildx'
 
+# Step 6: Build & Push Docker Image with BuildKit Cache
 - script: |
+    mkdir -p $(dockerBuildKitCacheFolder)
+
     docker buildx build \
       --builder builder \
       --tag $(imageName):latest \
-      --cache-from=type=registry,ref=$(imageName):$(cacheTag) \
-      --cache-to=type=registry,ref=$(imageName):$(cacheTag),mode=max \
-      --push \
+      --cache-from=type=local,src=$(dockerBuildKitCacheFolder) \
+      --cache-to=type=local,dest=$(dockerBuildKitCacheFolder),mode=max \
       .
-  displayName: 'Build & Push with BuildKit'
+  displayName: 'Build Docker Image with BuildKit Cache'
 
-# TEMPORARY DEPLOY ON BUILD AGENT
+# Optional: Temporary Deploy & Test Container Locally
 - script: |
-    echo "Pulling image and running container locally on agent..."
+    echo "Running container locally for testing..."
     docker run -d -p 90:80 --name test-container $(imageName):latest
 
     echo "Waiting for container to start..."
@@ -50,4 +77,4 @@ steps:
 
     echo "Stopping and cleaning up..."
     docker stop test-container && docker rm test-container
-  displayName: 'Temporary Deploy & Test Container on Azure Agent'
+  displayName: 'Temporary Deploy & Test Container Locally'
