--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,55 +3,56 @@ trigger:
     include:
       - cach
 
-variables:
-  imageName: 'mahmoudalsory/todoapp'
-  cacheTag: 'buildcache-$(Build.SourceBranchName)'
-  dockerfilePath: 'Dockerfile'
-
 pool:
   vmImage: 'ubuntu-latest'
 
+variables:
+  imageName: 'mahmoudalsory/todoapp'
+  cacheTag: 'buildcache'
+
 steps:
+# Step 1: Install Docker
 - task: DockerInstaller@0
   inputs:
     dockerVersion: '20.10.7'
-  displayName: 'Install Docker'
 
+# Step 2: Login to Docker Hub
 - script: |
     echo "$(DOCKERHUB_PASSWORD)" | docker login -u "$(DOCKERHUB_USERNAME)" --password-stdin
   displayName: 'Login to Docker Hub'
-  env:
-    DOCKERHUB_PASSWORD: $(DOCKERHUB_PASSWORD)
-    DOCKERHUB_USERNAME: $(DOCKERHUB_USERNAME)
 
+# Step 3: Setup Docker Buildx
 - script: |
     docker buildx create --use --name builder
     docker buildx inspect --bootstrap
-    docker buildx ls
-  displayName: 'Setup Buildx Builder'
+  displayName: 'Setup Docker Buildx'
 
+# Step 4: Build and Push with BuildKit (with caching)
 - script: |
     docker buildx build \
       --builder builder \
-      --file $(dockerfilePath) \
       --tag $(imageName):latest \
-      --tag $(imageName):$(Build.BuildId) \
       --cache-from=type=registry,ref=$(imageName):$(cacheTag) \
       --cache-to=type=registry,ref=$(imageName):$(cacheTag),mode=max \
-      --build-arg BUILDKIT_INLINE_CACHE=1 \
       --push \
       .
-  displayName: 'Build and Push with Cache'
+  displayName: 'Build & Push with BuildKit'
 
+# Step 5: Temporary Deploy & Test Container on Azure Agent
 - script: |
-    echo "Verifying cache usage..."
-    docker buildx build \
-      --builder builder \
-      --file $(dockerfilePath) \
-      --tag $(imageName):cache-test \
-      --cache-from=type=registry,ref=$(imageName):$(cacheTag) \
-      --load \
-      --progress plain \
-      .
-    docker history $(imageName):cache-test
-  displayName: 'Verify Cache Usage'
+    echo "Pulling image and running container locally on agent..."
+    docker pull $(imageName):latest
+    docker run -d -p 90:80 --name test-container $(imageName):latest
+
+    echo "Waiting for container to start..."
+    sleep 5
+
+    echo "Testing with curl:"
+    curl -I http://localhost:90 || echo "App did not respond!"
+
+    echo "Showing container logs:"
+    docker logs test-container || true
+
+    echo "Stopping and cleaning up..."
+    docker stop test-container && docker rm test-container
+  displayName: 'Temporary Deploy & Test Container on Azure Agent'
