--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,56 +3,39 @@ trigger:
     include:
       - cach
 
-pool:
-  vmImage: 'ubuntu-latest'
-
 variables:
-  imageName: 'mahmoudalsory/todoapp'
-  cacheTag: 'buildcache'
+  dockerImageName: 'mahmoudalsory/todo-app'
+  dockerImageTag: 'latest'
+  dockerCacheTag: 'buildcache'
 
-steps:
-# Step 1: Install Docker
-- task: DockerInstaller@0
-  inputs:
-    dockerVersion: '20.10.7'
+stages:
+  - stage: BuildAndPush
+    displayName: 'Build and Push Docker Image with Buildx Cache'
+    jobs:
+      - job: DockerBuild
+        displayName: 'Docker Build & Push'
+        pool:
+          vmImage: 'ubuntu-latest'
 
-# Step 2: Login to Docker Hub
-- script: |
-    echo "$(DOCKERHUB_PASSWORD)" | docker login -u "$(DOCKERHUB_USERNAME)" --password-stdin
-  displayName: 'Login to Docker Hub'
+        steps:
+          - task: DockerInstaller@0
+            inputs:
+              dockerVersion: '20.10.7'  # Optional: install a specific version
 
-# Step 3: Setup Docker Buildx
-- script: |
-    docker buildx create --use --name builder
-    docker buildx inspect --bootstrap
-  displayName: 'Setup Docker Buildx'
+          - script: |
+              echo "Creating and using buildx builder..."
+              docker buildx create --use --name mybuilder || docker buildx use mybuilder
+            displayName: 'Create Docker Buildx Builder'
 
-# Step 4: Build and Push with BuildKit (with caching)
-- script: |
-    docker buildx build \
-      --builder builder \
-      --tag $(imageName):latest \
-      --cache-from=type=registry,ref=$(imageName):$(cacheTag) \
-      --cache-to=type=registry,ref=$(imageName):$(cacheTag),mode=max \
-      --push \
-      .
-  displayName: 'Build & Push with BuildKit'
+          - script: |
+              echo $(DOCKERHUB_TOKEN) | docker login -u $(DOCKERHUB_USERNAME) --password-stdin
+            displayName: 'Login to Docker Hub'
 
-# Step 5: Temporary Deploy & Test Container on Azure Agent
-- script: |
-    echo "Pulling image and running container locally on agent..."
-    docker pull $(imageName):latest
-    docker run -d -p 90:80 --name test-container $(imageName):latest
-
-    echo "Waiting for container to start..."
-    sleep 5
-
-    echo "Testing with curl:"
-    curl -I http://localhost:90 || echo "App did not respond!"
-
-    echo "Showing container logs:"
-    docker logs test-container || true
-
-    echo "Stopping and cleaning up..."
-    docker stop test-container && docker rm test-container
-  displayName: 'Temporary Deploy & Test Container on Azure Agent'
+          - script: |
+              docker buildx build \
+                --build-arg BUILDKIT_INLINE_CACHE=1 \
+                --cache-from=type=registry,ref=$(dockerImageName):$(dockerCacheTag) \
+                --cache-to=type=registry,ref=$(dockerImageName):$(dockerCacheTag),mode=max \
+                -t $(dockerImageName):$(dockerImageTag) \
+                --push .
+            displayName: 'Build and Push with Remote Cache'
