--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ stages:
         steps:
           - task: DockerInstaller@0
             inputs:
-              dockerVersion: '20.10.7'  # Optional: install a specific version
+              dockerVersion: '20.10.7'
 
           - script: |
               echo "Creating and using buildx builder..."
@@ -28,8 +28,8 @@ stages:
             displayName: 'Create Docker Buildx Builder'
 
           - script: |
-              echo $(DOCKERHUB_TOKEN) | docker login -u $(DOCKERHUB_USERNAME) --password-stdin
-            displayName: 'Login to Docker Hub'
+              echo $(DOCKERHUB_PASSWORD) | docker login -u $(DOCKERHUB_USERNAME) --password-stdin
+            displayName: 'Login to Docker Hub with Password'
 
           - script: |
               docker buildx build \
